# robots-io

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: Doxyfile
docs/html/: CameraDeprojectionMatrix_8cpp_source.html  CameraDeprojectionMatrix_8h_source.html  CameraParameters_8cpp_source.html  CameraParameters_8h_source.html  Camera_8cpp_source.html  Camera_8h_source.html  ClockYarp_8cpp_source.html  ClockYarp_8h_source.html  Clock_8cpp_source.html  Clock_8h_source.html  ClockedComponent_8cpp_source.html  ClockedComponent_8h_source.html  DataStream_8cpp_source.html  DataStream_8h_source.html  Data_8h_source.html  DatasetCamera_8cpp_source.html  DatasetCamera_8h_source.html  DatasetDataStreamDelayed_8cpp_source.html  DatasetDataStreamDelayed_8h_source.html  DatasetDataStream_8cpp_source.html  DatasetDataStream_8h_source.html  DatasetDetection_8cpp_source.html  DatasetDetection_8h_source.html  DatasetParameters_8cpp_source.html  DatasetParameters_8h_source.html  DatasetSpatialVelocity_8cpp_source.html  DatasetSpatialVelocity_8h_source.html  DatasetTransformDelayed_8cpp_source.html  DatasetTransformDelayed_8h_source.html  DatasetTransform_8cpp_source.html  DatasetTransform_8h_source.html  DepthToFile_8cpp_source.html  DepthToFile_8h_source.html  FileToDepth_8cpp_source.html  FileToDepth_8h_source.html  FileToEigen_8cpp_source.html  FileToEigen_8h_source.html  FloatMatrixYarpPort_8cpp_source.html  FloatMatrixYarpPort_8h_source.html  FloatMatrix_8cpp_source.html  (+195 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+12 more)
python/: CMakeLists.txt  robots-io-python-types.i
src/: CMakeLists.txt
src/RobotsIO/: CMakeLists.txt
src/RobotsIO/config/Hand/: icub_hand_configuration.ini.template
src/RobotsIO/include/RobotsIO/Camera/: Camera.h  CameraDeprojectionMatrix.h  CameraParameters.h  DatasetCamera.h  DatasetParameters.h  RealsenseCameraYarp.h  SegmentationCamera.h  YarpCamera.h  iCubCamera.h  iCubCameraDepth.h  iCubCameraRelative.h
src/RobotsIO/include/RobotsIO/Hand/: iCubHand.h
src/RobotsIO/include/RobotsIO/Utils/: BOPDatasetDetection.h  Clock.h  ClockYarp.h  ClockedComponent.h  Data.h  DataStream.h  DatasetDataStream.h  DatasetDataStreamDelayed.h  DatasetDetection.h  DatasetSpatialVelocity.h  DatasetTransform.h  DatasetTransformDelayed.h  DepthToFile.h  Detection.h  DetectionYarpPort.h  FileToDepth.h  FileToEigen.h  FloatMatrix.h  FloatMatrixYarpPort.h  ImageFileProbe.h  Parameters.h  Parameters2YarpBottle.h  ParametersExtractor.h  ParametersFiller.h  ParametersYarpPort.h  Probe.h  ProbeContainer.h  RGBFilterData.h  Segmentation.h  SegmentationYarpPort.h  SpatialVelocity.h  SpatialVelocityBuffer.h  SpatialVelocityYarpPort.h  Transform.h  TransformWithVelocity.h  TransformWithVelocityYarpPort.h  TransformYarpPort.h  TransformYarpTransformClient.h  YarpBottleProbe.hpp  YarpBufferedPort.hpp  (+4 more)
src/RobotsIO/src/Camera/: Camera.cpp  CameraDeprojectionMatrix.cpp  CameraParameters.cpp  DatasetCamera.cpp  DatasetParameters.cpp  RealsenseCameraYarp.cpp  SegmentationCamera.cpp  YarpCamera.cpp  iCubCamera.cpp  iCubCameraDepth.cpp  iCubCameraRelative.cpp
src/RobotsIO/src/Hand/: iCubHand.cpp
src/RobotsIO/src/Python/: CMakeLists.txt  rgb-filter-data.i  yarp_import.i
src/RobotsIO/src/Utils/: BOPDatasetDetection.cpp  Clock.cpp  ClockYarp.cpp  ClockedComponent.cpp  DataStream.cpp  DatasetDataStream.cpp  DatasetDataStreamDelayed.cpp  DatasetDetection.cpp  DatasetSpatialVelocity.cpp  DatasetTransform.cpp  DatasetTransformDelayed.cpp  DepthToFile.cpp  Detection.cpp  DetectionYarpPort.cpp  FileToDepth.cpp  FileToEigen.cpp  FloatMatrix.cpp  FloatMatrixYarpPort.cpp  ImageFileProbe.cpp  Parameters.cpp  Parameters2YarpBottle.cpp  ParametersExtractor.cpp  ParametersYarpPort.cpp  Probe.cpp  ProbeContainer.cpp  RGBFilterData.cpp  Segmentation.cpp  SegmentationYarpPort.cpp  SpatialVelocity.cpp  SpatialVelocityBuffer.cpp  SpatialVelocityYarpPort.cpp  Transform.cpp  TransformWithVelocity.cpp  TransformWithVelocityYarpPort.cpp  TransformYarpPort.cpp  TransformYarpTransformClient.cpp  YarpBottleProbe.cpp  YarpRGBFilterDataProbe.cpp  YarpVectorOfProbe.cpp
src/RobotsIO/test/: CMakeLists.txt
src/RobotsIO/test/Utils/: CMakeLists.txt
src/RobotsIO/test/Utils/BOPDatasetDetection/: CMakeLists.txt  main.cpp  scene_gt.json  scene_gt_info.json
src/RobotsIO/test/Utils/Parameters/: CMakeLists.txt  TestParameters.cpp  TestParameters.h  main.cpp
src/RobotsIO/test/Utils/YarpImageOfMonoFloat/: CMakeLists.txt  main.cpp  receiver.py
src/RobotsIO/test/test_DatasetCamera/: CMakeLists.txt  main.cpp
src/RobotsIO/test/test_DatasetSpatialVelocity/: CMakeLists.txt  main.cpp
src/RobotsIO/test/test_DatasetTransform/: CMakeLists.txt  main.cpp
src/RobotsIO/thrift/: yarp_image_mono_float.thrift
